src/test/ui/parser/keyword-abstract.stderr
error: expected pattern, found reserved keyword `abstract`
  --> $DIR/keyword-abstract.rs:2:9
   |
LL |     let abstract = ();
   |         ^^^^^^^^ expected pattern

error: aborting due to previous error

